klaidos taisymas, there is no app reports

--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="error-page" class="error-404">
-        <a id="back_button" href="{% url 'reports:index' %}">Back to homepage</a>
+        <a id="back_button" href="{% url 'bookkeeping:index' %}">Back to homepage</a>
         <div id="error-message">ERROR #404</div>
     </section>
 </body>
