--- a/project/expenses/templates/expenses/includes/partial_expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_type_list.html
@@ -4,7 +4,8 @@
     <a href="#" class="list-group-item list-group-item-action list-group-item-primary" data-url="{{ url_type_update }}">{{ item.title }}</a>
     {% for sub in item.expensename_set.all %}
     {% url 'expenses:expenses_name_update' sub.id as url_name_update %}
-    <a href="#" class="list-group-item list-group-item-action" data-url="{{ url_name_update }}">{{ sub.title }}</a>{% endfor %}
+    <a href="#" class="list-group-item list-group-item-action" data-url="{{ url_name_update }}">{{ sub.title }} {% if sub.valid_for %}<span class="badge badge-secondary">{{ sub.valid_for }}</span>{% endif %}</a>
+    {% endfor %}
 </div>
 {% endfor %}
 
@@ -16,5 +17,9 @@
 
     .list-group-item.list-group-item-primary {
         padding-left: 0.25rem;
+    }
+
+    .badge {
+        font-weight: normal;
     }
 </style>
