--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -19,6 +19,10 @@
             <td class="text-right" {% if item.remark %}data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.remark|linebreaks}}" style="border-right: 5px solid lightgreen;"{% endif %}>{{ item.price }}</td>
             <td class="text-right" {% if item.exception %} style="border-right: 5px solid red;"{% endif %}>{{ item.account }}</td>
         </tr>
+        {% empty %}
+        <tr class="table-warning text-center">
+            <td colspan="6" class="py-2"><b>{{ request.session.year }}</b> metais išlaidų nėra.</td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
