--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/accounts/' in request.path %}active{% endif %}"
-              href="{% url 'accounts:accounts_list' %}">Sąskaitos</a>
+              href="">Sąskaitos</a>
           </li>
         </ul>
       </nav>
