--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -36,8 +36,8 @@
             <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if '/accounts/' in request.path %}active{% endif %}"
-              href="">Sąskaitos</a>
+            <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}"
+              href="{% url 'transactions:transactions_lists' %}">Pervedimai</a>
           </li>
         </ul>
       </nav>
