--- a/project/accounts/templates/accounts/includes/partial_accounts_list.html
+++ b/project/accounts/templates/accounts/includes/partial_accounts_list.html
@@ -1,5 +1,5 @@
 <div class="list-group mb-2">
-    <div class="list-group-item list-group-item-action list-group-item-primary" data-url="{{ url_type_update }}">Sąskaitos</div>
+    <div class="list-group-item list-group-item-action list-group-item-primary">Sąskaitos</div>
     {% for item in categories %}
     {% url 'accounts:accounts_update' item.id as url_update %}
     <div class="list-group-item list-group-item-action" data-url="{{ url_update }}">{{ item.title }}</div>
