--- a/project/transactions/templates/transactions/includes/partial_transactions_form.html
+++ b/project/transactions/templates/transactions/includes/partial_transactions_form.html
@@ -1,2 +1,20 @@
 {% load form %}
-{% generic_form title='Pinigų pervedimas' update_container='ajax-content' %}
+{% url 'accounts:load_to_account' as url_chained %}
+{% generic_form title='Pinigų pervedimas' update_container='ajax-content' chained_dropdown=url_chained %}
+
+<script>
+    $("#id_from_account").change(function () {
+        var url = $("#js-form").attr("data-chained-dropdown");
+        var id = $(this).val();
+        console.log('koks: ', url, ' id:', id)
+        $.ajax({
+            url: url,
+            data: {
+                'id': id
+            },
+            success: function (data) {
+                $("#id_to_account").html(data);
+            }
+        });
+    });
+</script>
