--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -36,8 +36,11 @@
             <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if '/incomes/' in request.path %}active{% endif %}" href="{% url 'incomes:incomes_list' %}">Pajamos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}"
-              href="{% url 'transactions:transactions_lists' %}">Pervedimai</a>
+              href="{% url 'transactions:transactions_list' %}">Pervedimai</a>
           </li>
         </ul>
       </nav>
