--- a/project/incomes/templates/incomes/includes/partial_incomes_list.html
+++ b/project/incomes/templates/incomes/includes/partial_incomes_list.html
@@ -2,6 +2,7 @@
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
+        <th>Pajamų rūšis</th>
         <th>Sąskaita</th>
         <th>Pastaba</th>
         <th class="text-right">Suma</th>
@@ -11,6 +12,7 @@
         {% url 'incomes:incomes_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
+            <td>{{ item.income_type }}</td>
             <td>{{ item.account }}</td>
             <td>{{ item.remark }}</td>
             <td class="text-right">{{ item.amount }}</td>
