--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -1,4 +1,4 @@
-{% load buttons %}
+{% load buttons %}{% load humanize %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
@@ -16,7 +16,7 @@
             <td>{{ item.expense_type }}</td>
             <td>{{ item.expense_name }}</td>
             <td class="text-right">{{ item.quantity }}</td>
-            <td class="text-right" {% if item.remark %}data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.remark|linebreaks}}" style="border-right: 5px solid lightgreen;"{% endif %}>{{ item.price }}</td>
+            <td class="text-right" {% if item.remark %}data-toggle="tooltip" data-html="true" data-placement="right" title="{{ item.remark|linebreaks}}" style="border-right: 5px solid lightgreen;"{% endif %}>{{ item.price|intcomma }}</td>
             <td class="text-right" {% if item.exception %} style="border-right: 5px solid red;"{% endif %}>{{ item.account }}</td>
         </tr>
         {% empty %}
