--- a/project/incomes/templates/incomes/includes/partial_incomes_list.html
+++ b/project/incomes/templates/incomes/includes/partial_incomes_list.html
@@ -1,4 +1,4 @@
-{% load buttons %}
+{% load buttons %}{% load humanize %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
@@ -15,7 +15,7 @@
             <td>{{ item.income_type }}</td>
             <td>{{ item.account }}</td>
             <td>{{ item.remark }}</td>
-            <td class="text-right">{{ item.amount }}</td>
+            <td class="text-right">{{ item.amount|intcomma }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
