--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -42,6 +42,10 @@
             <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}"
               href="{% url 'transactions:transactions_list' %}">Pervedimai</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if '/savings/' in request.path %}active{% endif %}"
+              href="{% url 'savings:savings_list' %}">Taupymas</a>
+          </li>
         </ul>
       </nav>
 
