--- a/project/incomes/templates/incomes/includes/partial_incomes_type_list.html
+++ b/project/incomes/templates/incomes/includes/partial_incomes_type_list.html
@@ -1,7 +1,7 @@
 <div class="list-group mb-2">
     <div class="list-group-item list-group-item-action list-group-item-primary">Pajamų rūšys</div>
     {% for item in categories %}
-    {% url 'accounts:accounts_update' item.id as url_update %}
+    {% url 'incomes:incomes_type_update' item.id as url_update %}
     <div class="list-group-item list-group-item-action" data-url="{{ url_update }}">{{ item.title }}</div>
     {% endfor %}
 </div>
