--- a/project/bookkeeping/templates/bookkeeping/test.html
+++ b/project/bookkeeping/templates/bookkeeping/test.html
@@ -2,5 +2,8 @@
 
 
 {% block content %}
-    index
+    index<br>
+    username: {{ user.username }}<br>
+    id: {{ user.id }}<br>
+    e-mail: {{ user.email }}
 {% endblock content %}
