--- a/project/bookkeeping/templates/bookkeeping/test.html
+++ b/project/bookkeeping/templates/bookkeeping/test.html
@@ -5,5 +5,7 @@
     index<br>
     username: {{ user.username }}<br>
     id: {{ user.id }}<br>
-    e-mail: {{ user.email }}
+    e-mail: {{ user.email }}<br>
+    year: {{ user.profile.year }}<br>
+    month: {{ user.profile.month }}<br>
 {% endblock content %}
