--- a/project/drinks/templates/drinks/drinks_list.html
+++ b/project/drinks/templates/drinks/drinks_list.html
@@ -17,13 +17,13 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
-    <div id="ajax-content">{% include 'drinks/includes/partial_drinks_list.html' %}</div>
+    <div id="ajax-content" class="dblclick">{% include 'drinks/includes/partial_drinks_list.html' %}</div>
 </div>
 <div class="col-4 px-0">
     <div class="row my-2">
         <div class="col text-right"></div>
     </div>
-    <div id="ajax-content-categories"></div>
+    <div id="ajax-content-categories" class="dblclick"></div>
 </div>
 
 <div class="modal fade" id="modal-form">
