--- a/project/expenses/templates/expenses/expenses_list.html
+++ b/project/expenses/templates/expenses/expenses_list.html
@@ -19,7 +19,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
         </div>
     </div>
-    <div id="ajax-content">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
+    <div id="ajax-content" class="dblclick">{% include 'expenses/includes/partial_expenses_list.html' %}</div>
 </div>
 <div class="col-4 px-0">
     <div class="row my-2">
@@ -28,7 +28,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}"><i class="fas fa-plus"></i> Išlaidų pavadinimą</button>
         </div>
     </div>
-    <div id="ajax-content-categories">{% include 'expenses/includes/partial_expenses_type_list.html' %}</div>
+    <div id="ajax-content-categories" class="dblclick">{% include 'expenses/includes/partial_expenses_type_list.html' %}</div>
 </div>
 
 <div class="modal fade" id="modal-form">
