--- a/project/savings/templates/savings/savings_list.html
+++ b/project/savings/templates/savings/savings_list.html
@@ -18,7 +18,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
-    <div id="ajax-content">{% include 'savings/includes/partial_savings_list.html' %}</div>
+    <div id="ajax-content" class="dblclick">{% include 'savings/includes/partial_savings_list.html' %}</div>
 </div>
 <div class="col-4 px-0">
     <div class="row my-2">
@@ -26,7 +26,7 @@
             <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_type_new }}"><i class="fas fa-plus"></i> Fondą</button>
         </div>
     </div>
-    <div id="ajax-content-categories">{{ categories }}</div>
+    <div id="ajax-content-categories" class="dblclick">{{ categories }}</div>
 </div>
 
 <div class="modal fade" id="modal-form">
