refactoring templates with templatetags

--- a/project/plans/templates/plans/includes/partial_incomes_list.html
+++ b/project/plans/templates/plans/includes/partial_incomes_list.html
@@ -1,42 +1,2 @@
-{% load buttons %}{% load humanize %}
-<table class="table table-striped table-hover">
-    <thead class="thead-light">
-        <th>Pavadinimas</th>
-        <th class="text-right">Sausis</th>
-        <th class="text-right">Vasaris</th>
-        <th class="text-right">Kovas</th>
-        <th class="text-right">Balandis</th>
-        <th class="text-right">Gegužė</th>
-        <th class="text-right">Birželis</th>
-        <th class="text-right">Liepa</th>
-        <th class="text-right">Rugpjūtis</th>
-        <th class="text-right">Rugsėjis</th>
-        <th class="text-right">Spalis</th>
-        <th class="text-right">Lapkritis</th>
-        <th class="text-right">Gruodis</th>
-    </thead>
-    <tbody>
-        {% for item in incomes_list %}
-        {% url 'plans:plans_incomes_update' item.id as url_update %}
-        <tr data-url="{{ url_update }}">
-            <td>{{ item.income_type }}</td>
-            <td class="text-right">{{ item.january|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.february|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.march|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.april|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.may|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.june|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.july|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.august|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.september|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.october|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.november|intcomma|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.december|intcomma|default_if_none:'-' }}</td>
-        </tr>
-        {% empty %}
-        <tr class="table-warning text-center">
-            <td colspan="13" class="py-2"><b>{{ request.user.profile.year }}</b> metais įrašų nėra.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% load partial_generic_list %}
+{% generic_list incomes_list 'plans:plans_incomes_update' request.user.profile.year 'income_type' %}
