--- a/project/plans/templates/plans/includes/partial_expenses_list.html
+++ b/project/plans/templates/plans/includes/partial_expenses_list.html
@@ -1,43 +1,4 @@
-{% load buttons %}{% load humanize %}
-<table class="table table-striped table-hover">
-    <thead class="thead-light">
-        <th>Pavadinimas</th>
-        <th class="text-right">Sausis</th>
-        <th class="text-right">Vasaris</th>
-        <th class="text-right">Kovas</th>
-        <th class="text-right">Balandis</th>
-        <th class="text-right">Gegužė</th>
-        <th class="text-right">Birželis</th>
-        <th class="text-right">Liepa</th>
-        <th class="text-right">Rugpjūtis</th>
-        <th class="text-right">Rugsėjis</th>
-        <th class="text-right">Spalis</th>
-        <th class="text-right">Lapkritis</th>
-        <th class="text-right">Gruodis</th>
-    </thead>
-    <tbody>
-        {% for item in expenses_list %}
-        {% url 'plans:plans_expenses_update' item.id as url_update %}
-        <tr data-url="{{ url_update }}">
-            <td>{{ item.expense_type }}</td>
-            <td class="text-right">{{ item.january|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.february|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.march|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.april|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.may|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.june|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.july|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.august|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.september|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.october|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.november|default_if_none:'-' }}</td>
-            <td class="text-right">{{ item.december|default_if_none:'-' }}</td>
+{% load partial_generic_list %}
 
-        </tr>
-        {% empty %}
-        <tr class="table-warning text-center">
-            <td colspan="13" class="py-2"><b>{{ request.user.profile.year }}</b> metais įrašų nėra.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% load partial_generic_list %}
+{% generic_list expenses_list 'plans:plans_expenses_update' request.user.profile.year 'expense_type' %}
