changed items templates variable

--- a/project/plans/templates/plans/includes/partial_incomes_list.html
+++ b/project/plans/templates/plans/includes/partial_incomes_list.html
@@ -1,2 +1,2 @@
 {% load partial_generic_list %}
-{% generic_list incomes_list 'plans:plans_incomes_update' request.user.profile.year 'income_type' %}
+{% generic_list items 'plans:plans_incomes_update' request.user.profile.year 'income_type' %}
