--- a/project/plans/templates/plans/includes/partial_expenses_list.html
+++ b/project/plans/templates/plans/includes/partial_expenses_list.html
@@ -1,4 +1,4 @@
 {% load partial_generic_list %}
 
 {% load partial_generic_list %}
-{% generic_list expenses_list 'plans:plans_expenses_update' request.user.profile.year 'expense_type' %}
+{% generic_list items 'plans:plans_expenses_update' request.user.profile.year 'expense_type' %}
