using crud_views_mixin

--- a/project/drinks/templates/drinks/includes/partial_drinks_list.html
+++ b/project/drinks/templates/drinks/includes/partial_drinks_list.html
@@ -5,7 +5,7 @@
         <th class="text-right">Kiekis</th>
     </thead>
     <tbody>
-        {% for item in objects %}
+        {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
