transaction app using crud_views_mixin

--- a/project/transactions/templates/transactions/includes/partial_transactions_list.html
+++ b/project/transactions/templates/transactions/includes/partial_transactions_list.html
@@ -7,7 +7,7 @@
         <th class="text-right">Suma</th>
     </thead>
     <tbody>
-        {% for item in objects %}
+        {% for item in items %}
         {% url 'transactions:transactions_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
