--- a/project/drinks/templates/drinks/includes/partial_drinks_list.html
+++ b/project/drinks/templates/drinks/includes/partial_drinks_list.html
@@ -13,7 +13,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="6" class="py-2"><b>{{ request.session.year }}</b> metais įrašų nėra.</td>
+            <td colspan="6" class="py-2"><b>{{ request.user.profile.year }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
