--- a/project/transactions/templates/transactions/includes/partial_transactions_list.html
+++ b/project/transactions/templates/transactions/includes/partial_transactions_list.html
@@ -17,7 +17,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="4" class="py-2"><b>{{ request.session.year }}</b> metais pervedimų nėra.</td>
+            <td colspan="4" class="py-2"><b>{{ request.user.profile.year }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
