income views using crud_views_mixin

--- a/project/incomes/templates/incomes/includes/partial_incomes_list.html
+++ b/project/incomes/templates/incomes/includes/partial_incomes_list.html
@@ -8,7 +8,7 @@
         <th class="text-right">Suma</th>
     </thead>
     <tbody>
-        {% for item in objects %}
+        {% for item in items %}
         {% url 'incomes:incomes_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
