--- a/project/expenses/templates/expenses/includes/partial_expenses_list.html
+++ b/project/expenses/templates/expenses/includes/partial_expenses_list.html
@@ -9,7 +9,7 @@
         <th class="text-right">Sąskaita</th>
     </thead>
     <tbody>
-        {% for item in objects %}
+        {% for item in items %}
         {% url 'expenses:expenses_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
