--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -50,6 +50,20 @@
     <div class="row my-2">
         <div id="savings_list" class="col dblclick">{{ savings_list }}</div>
     </div>
+
+    <!-- day plans -->
+    <div class="row my-2">
+        <div class="col-10">
+            <h6>Suma dienai</h6>
+        </div>
+        <div class="col-2 text-right">
+            {% url 'plans:plans_day_new' as url_day_new %}
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_day_new }}"><i class="fas fa-plus"></i> Įrašą</button>
+        </div>
+    </div>
+    <div class="row my-2">
+        <div id="day_list" class="col dblclick">{{ day_list }}</div>
+    </div>
 </div>
 
 <!-- left side -->
