show plans_stats in planing page, and asynchronous reload after update expenses or incomes

--- a/project/plans/templates/plans/includes/partial_expenses_form.html
+++ b/project/plans/templates/plans/includes/partial_expenses_form.html
@@ -1,3 +1,3 @@
 {% load form %}
-{% generic_form title='Išlaidų planas' update_container='expenses_list' %}
+{% generic_form title='Išlaidų planas' update_container='expenses_list' chained_dropdown='plans_stats' %}
 
