--- a/project/plans/templates/plans/includes/partial_incomes_form.html
+++ b/project/plans/templates/plans/includes/partial_incomes_form.html
@@ -1,3 +1,3 @@
 {% load form %}
-{% generic_form title='Pajamų planas' update_container='incomes_list' %}
+{% generic_form title='Pajamų planas' update_container='incomes_list' chained_dropdown='plans_stats' %}
 
