--- a/project/plans/templates/plans/includes/partial_savings_form.html
+++ b/project/plans/templates/plans/includes/partial_savings_form.html
@@ -1,3 +1,2 @@
 {% load form %}
-{% generic_form title='Taupymo planas' update_container='savings_list' %}
-
+{% generic_form title='Taupymo planas' update_container='savings_list' chained_dropdown='plans_stats' %}
