--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -79,4 +79,21 @@
         <div class="modal-content"></div>
     </div>
 </div>
+
+<script>
+    $(document).on('hidden.bs.modal', '#modal-form', function () {
+        var url = `{% url 'plans:reload_plans_stats' %}`;
+        var update_id = $("#js-form").attr("data-chained-dropdown");
+
+        $.ajax({
+            url: url,
+            data: {
+                'ajax_trigger': '1'
+            },
+            success: function (data) {
+                $(`#${update_id}`).html(data);
+            }
+        });
+    });
+</script>
 {% endblock content %}
