shows plans stats in plans index

--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -64,6 +64,17 @@
     <div class="row my-2">
         <div id="day_list" class="col dblclick">{{ day_list }}</div>
     </div>
+
+    <!-- stats plans -->
+    <div class="row my-2">
+        <div class="col-10">
+            <h6>Skaičiavimai</h6>
+        </div>
+        <div class="col-2 text-right"></div>
+    </div>
+    <div class="row my-2">
+        <div id="day_list" class="col dblclick">{{ plans_stats }}</div>
+    </div>
 </div>
 
 <!-- left side -->
