--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -73,7 +73,7 @@
         <div class="col-2 text-right"></div>
     </div>
     <div class="row my-2">
-        <div id="day_list" class="col dblclick">{{ plans_stats }}</div>
+        <div id="plans_stats" class="col dblclick">{{ plans_stats }}</div>
     </div>
 </div>
 
