--- a/project/plans/templates/plans/plans_list.html
+++ b/project/plans/templates/plans/plans_list.html
@@ -68,9 +68,7 @@
 
     <!-- stats plans -->
     <div class="row my-2">
-        <div class="col-10">
-            <h6>Skaičiavimai</h6>
-        </div>
+        <div class="col-10"><h6>Skaičiavimai</h6></div>
         <div class="col-2 text-right"></div>
     </div>
     <div class="row my-2">
