--- a/project/plans/templates/plans/includes/partial_generic_list.html
+++ b/project/plans/templates/plans/includes/partial_generic_list.html
@@ -1,4 +1,4 @@
-{% load get_item %}{% load decimal_format %}
+{% load get_item %}{% load decimal_format %}{% load define_action %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Pavadinimas</th>
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% if url_update %}{% url url_update item.id as url %}{% endif %}
+        {% if url_update %}{% url url_update item.id as url %}{% else %}{% define '' as url %}{% endif %}
         <tr data-url="{{ url }}">
             <td>{{ item|get_obj_attr:type }}{% if item.expense_type.necessary %} <i class="far fa-star"></i>{% endif %}</td>
             <td class="text-right" width="7%">{{ item.january|decimalformat }}</td>
