generic_list changed color of star witch marks necessary expenses

--- a/project/plans/templates/plans/includes/partial_generic_list.html
+++ b/project/plans/templates/plans/includes/partial_generic_list.html
@@ -19,7 +19,7 @@
         {% for item in items %}
         {% if url_update %}{% url url_update item.id as url %}{% else %}{% define '' as url %}{% endif %}
         <tr data-url="{{ url }}">
-            <td>{{ item|get_obj_attr:type }}{% if item.expense_type.necessary %} <i class="far fa-star"></i>{% endif %}</td>
+            <td>{{ item|get_obj_attr:type }}{% if item.expense_type.necessary %} <i class="far fa-star star"></i>{% endif %}{% if item.saving_type %} <i class="far fa-star star"></i>{% endif %}</td>
             <td class="text-right" width="7%">{{ item.january|decimalformat }}</td>
             <td class="text-right" width="7%">{{ item.february|decimalformat }}</td>
             <td class="text-right" width="7%">{{ item.march|decimalformat }}</td>
@@ -40,3 +40,10 @@
         {% endfor %}
     </tbody>
 </table>
+
+<style>
+    .star {
+        color: #e83e8c;
+        padding-left: .5rem;
+    }
+</style>
