--- a/project/plans/templates/plans/includes/partial_generic_list.html
+++ b/project/plans/templates/plans/includes/partial_generic_list.html
@@ -1,4 +1,4 @@
-{% load get_item %}{% load decimal_format %}{% load define_action %}
+{% load get_item %}{% load define_action %}{% load partial_generic_list_cell %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Pavadinimas</th>
@@ -21,18 +21,18 @@
         <tr data-url="{{ url }}">
             {% with item|get_obj_attr:type as name %}
             <td>{{ name }}{% if item.expense_type.necessary or item.saving_type or 'Būtin' in name %} <i class="far fa-star star"></i>{% endif %}</td>{% endwith %}
-            <td class="text-right" width="7%">{{ item.january|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.february|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.march|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.april|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.may|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.june|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.july|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.august|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.september|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.october|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.november|decimalformat }}</td>
-            <td class="text-right" width="7%">{{ item.december|decimalformat }}</td>
+            {% td item.january %}
+            {% td item.february %}
+            {% td item.march %}
+            {% td item.april %}
+            {% td item.may %}
+            {% td item.june %}
+            {% td item.july %}
+            {% td item.august %}
+            {% td item.september %}
+            {% td item.october %}
+            {% td item.november %}
+            {% td item.december %}
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
