changed field in all models amount -> price

--- a/project/incomes/templates/incomes/includes/partial_incomes_list.html
+++ b/project/incomes/templates/incomes/includes/partial_incomes_list.html
@@ -15,7 +15,7 @@
             <td>{{ item.income_type }}</td>
             <td>{{ item.account }}</td>
             <td>{{ item.remark }}</td>
-            <td class="text-right">{{ item.amount|intcomma }}</td>
+            <td class="text-right">{{ item.price|intcomma }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
