--- a/project/savings/templates/savings/includes/partial_savings_list.html
+++ b/project/savings/templates/savings/includes/partial_savings_list.html
@@ -16,7 +16,7 @@
             <td>{{ item.saving_type }}</td>
             <td>{{ item.account }}</td>
             <td>{{ item.remark }}</td>
-            <td class="text-right">{{ item.amount|intcomma }}</td>
+            <td class="text-right">{{ item.price|intcomma }}</td>
             <td class="text-right">{{ item.fee|intcomma }}</td>
         </tr>
         {% empty %}
