--- a/project/transactions/templates/transactions/includes/partial_transactions_list.html
+++ b/project/transactions/templates/transactions/includes/partial_transactions_list.html
@@ -13,7 +13,7 @@
             <td>{{ item.date }}</td>
             <td>{{ item.from_account }}</td>
             <td>{{ item.to_account }}</td>
-            <td class="text-right">{{ item.amount }}</td>
+            <td class="text-right">{{ item.price }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
