--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -33,6 +33,9 @@
             </div>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if '/' == request.path %}active{% endif %}" href="{% url 'bookkeeping:index' %}">Bendra</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if '/expenses/' in request.path %}active{% endif %}" href="{% url 'expenses:expenses_list' %}">Išlaidos</a>
           </li>
           <li class="nav-item">
