--- a/project/bookkeeping/templates/bookkeeping/main.html
+++ b/project/bookkeeping/templates/bookkeeping/main.html
@@ -1,11 +1,41 @@
 {% extends 'base.html' %}
 
+{% block head %}
+{{ form.media }}
+<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+{% endblock head %}
+
 
 {% block content %}
-    index<br>
-    username: {{ user.username }}<br>
-    id: {{ user.id }}<br>
-    e-mail: {{ user.email }}<br>
-    year: {{ user.profile.year }}<br>
-    month: {{ user.profile.month }}<br>
+
+<div class="col-8 pl-0">
+ <table>
+     <thead>
+         <tr>
+             <th>Sąskaita</th>
+             <th>01.01</th>
+             <th>Pajamos</th>
+             <th>Išlaidos</th>
+             <th>Likutis</th>
+        </tr>
+     </thead>
+     <tbody>
+         {% for account, stats in tbl.items %}
+             <tr>
+                 <td>{{ account }}</td>
+                 <td>{{ stats.past }}</td>
+                 <td>{{ stats.incomes }}</td>
+                 <td>{{ stats.expenses }}</td>
+                 <td>{{ stats.balance }}</td>
+             </tr>
+         {% endfor %}
+     </tbody>
+ </table>
+</div>
+
+<div class="modal fade" id="modal-form">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content"></div>
+    </div>
+</div>
 {% endblock content %}
