--- a/project/plans/templates/plans/includes/partial_generic_list.html
+++ b/project/plans/templates/plans/includes/partial_generic_list.html
@@ -1,4 +1,4 @@
-{% load get_item %}{% load define_action %}{% load partial_generic_list_cell %}
+{% load get_item %}{% load define_action %}{% load cell_decimal %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Pavadinimas</th>
