--- a/project/core/templates/core/includes/cell_decimal.html
+++ b/project/core/templates/core/includes/cell_decimal.html
@@ -1,3 +1,3 @@
-{% load decimal_format %}{% load negative_cell_value %}
+{% load decimal_format %}{% load cell_negative_value %}
 
 {% with value as val %}<td class="text-right {{ val|negativecell }}" width="7%">{{ val|decimalformat }}</td>{% endwith %}
