--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -1,4 +1,3 @@
-{% load buttons %}
 <table class="table table-striped table-hover">
     <thead class="thead-light">
         <th>Data</th>
@@ -8,7 +7,6 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'transactions:transactions_update' item.id as url_update %}
         <tr data-url="{{ url_update }}">
             <td>{{ item.date }}</td>
             <td>{{ item.from_account }}</td>
@@ -17,7 +15,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="4" class="py-2"><b>{{ request.user.profile.year }}</b> metais įrašų nėra.</td>
+            <td colspan="4" class="py-2"><b>{{ year }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
