klaidos taisymas, neteisingas transactions index url name

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -43,7 +43,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}"
-              href="{% url 'transactions:transactions_list' %}">Pervedimai</a>
+              href="{% url 'transactions:transactions_index' %}">Pervedimai</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/savings/' in request.path %}active{% endif %}"
