--- a/project/transactions/templates/transactions/transactions_list.html
+++ b/project/transactions/templates/transactions/transactions_list.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="row my-2">
-        <div id="expenses_list" class="col dblclick">{{ transactions }}</div>
+        <div id="transactions_list" class="col dblclick">{{ transactions }}</div>
     </div>
 
     <!-- close savings -->
