--- a/project/transactions/templates/transactions/transactions_list.html
+++ b/project/transactions/templates/transactions/transactions_list.html
@@ -30,8 +30,7 @@
         </div>
         <div class="col-2 text-right">
             {% url 'transactions:savings_close_new' as url_savings_close %}
-            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i
-                    class="fas fa-plus"></i> Įrašą</button>
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="fas fa-plus"></i> Įrašą</button>
         </div>
     </div>
     <div class="row my-2">
