--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -4,6 +4,7 @@
         <th>Iš sąskaitos</th>
         <th>Į sąskaitą</th>
         <th class="text-right">Suma</th>
+        {% if fees %}<th class="text-right">Mokesčiai</th>{% endif %}
     </thead>
     <tbody>
         {% for item in items %}
@@ -13,10 +14,11 @@
             <td>{{ item.from_account }}</td>
             <td>{{ item.to_account }}</td>
             <td class="text-right">{{ item.price }}</td>
+            {% if fees %}<td class="text-right">{{ item.fee }}</td>{% endif %}
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="4" class="py-2"><b>{{ year }}</b> metais įrašų nėra.</td>
+            <td colspan="{% if fees %}5{% else %}4{% endif %}" class="py-2"><b>{{ year }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
