changed saving close form title

--- a/project/transactions/templates/transactions/includes/partial_savings_close_form.html
+++ b/project/transactions/templates/transactions/includes/partial_savings_close_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_form title='Pinigų pervedimas' update_container='savings_close_list' %}
+{% generic_form title='Fondas &rArr; Sąskaita' update_container='savings_close_list' %}
