--- a/project/transactions/templates/transactions/includes/partial_savings_close.html
+++ b/project/transactions/templates/transactions/includes/partial_savings_close.html
@@ -1,25 +1,3 @@
-<table class="table table-striped table-hover">
-    <thead class="thead-light">
-        <th>Data</th>
-        <th>Iš sąskaitos</th>
-        <th>Į sąskaitą</th>
-        <th class="text-right">Suma</th>
-        <th class="text-right">Mokesčiai</th>
-    </thead>
-    <tbody>
-        {% for item in items %}
-        {% url url_name item.id as url %}
-        <tr data-url="{{ url }}">
-            <td>{{ item.date }}</td>
-            <td>{{ item.from_account }}</td>
-            <td>{{ item.to_account }}</td>
-            <td class="text-right">{{ item.price }}</td>
-            <td class="text-right">{{ item.fee }}</td>
-        </tr>
-        {% empty %}
-        <tr class="table-warning text-center">
-            <td colspan="5" class="py-2"><b>{{ user.profile.year }}</b> metais įrašų nėra.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% load table %}
+
+{% table 'transactions:savings_close_update' fees=True %}
