--- a/project/transactions/templates/transactions/transactions_list.html
+++ b/project/transactions/templates/transactions/transactions_list.html
@@ -36,6 +36,20 @@
     <div class="row my-2">
         <div id="savings_close_list" class="col dblclick">{{ savings_close }}</div>
     </div>
+
+    <!-- change savings -->
+    <div class="row my-2">
+        <div class="col-10">
+            <h6>Fondas &hArr; Fondas</h6>
+        </div>
+        <div class="col-2 text-right">
+            {% url 'transactions:savings_change_new' as url_savings_change %}
+            <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="fas fa-plus"></i> Įrašą</button>
+        </div>
+    </div>
+    <div class="row my-2">
+        <div id="savings_change_list" class="col dblclick">{{ savings_change }}</div>
+    </div>
 </div>
 
 <!-- left side -->
